# reginald

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md  add_to_path.sh  justfile  pyproject.toml  requirements.txt  run.py  setup.cfg
.github/workflows/: ci-web.yml  ci.yml
docs/: LICENSE  book.toml  intro.md
examples/maps/: dummy.hjson  dummy.yaml  example_advanced.yaml  lsm6dsv16bx.hjson  lsm6dsv16bx.yaml  max77654.hjson  max77654.yaml
examples/regdump/: dump_max77654.yaml
maps/: max77654.yaml
reginald/: Cargo.toml  args.py  bits.py  cli.py  datamodel.py  error.py  generator.py  jinja2_generator.py  rustfmt.toml  utils.py  validator.py
reginald/builtin_generators/: c_macromap.py  c_macropalette.py  external_jinja2_template.py  markdown_doc.py  md_doc.py  md_regdumpanalysis.py
reginald/builtin_generators/c/: funcpack.py  macromap.py
reginald/builtin_generators/c/funcpack/: enums.py  funcpack.py  name_generator.py  reg_utils.py  regs.py  utils.py
reginald/builtin_generators/c_funcpack/: enums.py  generic_pack.py  regs.py
reginald/builtin_generators/md/: doc.py  regdumpanalysis.py
reginald/builtin_templates/c/: funcpack.h
reginald/input/: convert_yaml.py  parse_yaml.py  validate_map.py
reginald/src/: error.rs  generator_cli.rs  lib.rs  traits.rs  utils.rs
reginald/src/builtin/c/: funcpack.rs
reginald/src/regmap/: bits.rs  convert.rs  listing.rs  mod.rs  validate.rs
reginald_cli/: Cargo.toml
reginald_cli/src/: diff.rs  main.rs
reginald_cli/src/cmd/: completion.rs  generate.rs  mod.rs  tool.rs
reginald_cli/src/cmd/generate/: mod.rs
reginald_cli/src/cmd/generate/c/: funcpack.rs  mod.rs
reginald_codegen/: Cargo.toml  rustfmt.toml
reginald_codegen/generator_tests/: map.yaml  run_tests.bash
reginald_codegen/generator_tests/c_funcpack/: .gitignore  map.yaml  run_test.bash  test.c
reginald_codegen/generator_tests/rs_nodeps/: map.yaml  run_test.bash
reginald_codegen/generator_tests/rs_nodeps/rs_nodeps_test/: Cargo.toml
reginald_codegen/generator_tests/rs_nodeps/rs_nodeps_test/src/: lib.rs
reginald_codegen/generator_tests/rs_struct_no_deps/: run_test.bash
reginald_codegen/generator_tests/rs_struct_no_deps/rs_struct_no_deps_test/: Cargo.toml
reginald_codegen/generator_tests/rs_structs/: .gitignore  map.yaml  run_test.bash
reginald_codegen/generator_tests/rs_structs/rs_structs_test/src/: lib.rs
reginald_codegen/src/: bits.rs  cli.rs  error.rs  generator_cli.rs  indent_write.rs  lib.rs  main.rs  template.rs  utils.rs
reginald_codegen/src/builtin/: mod.rs
reginald_codegen/src/builtin/c/: funcpack.rs  mod.rs
reginald_codegen/src/builtin/c/funcpack/: enums.rs  layouts.rs  mod.rs  registers.rs
reginald_codegen/src/builtin/c/macromap/: macromap_template.h  mod.rs
reginald_codegen/src/builtin/c/snapshots/: reginald_codegen__builtin__c__funcpack__tests__snapshot_funcpack.snap
reginald_codegen/src/builtin/md/: mod.rs
reginald_codegen/src/builtin/md/datasheet/: mod.rs  regdump.rs
reginald_codegen/src/builtin/rs/: mod.rs
reginald_codegen/src/builtin/rs/nodeps/: mod.rs
reginald_codegen/src/builtin/rs/structs/: enums.rs  layouts.rs  mod.rs  registers.rs  traits.txt
reginald_codegen/src/builtin/rs/structs_no_deps/: mod.rs
reginald_codegen/src/cli/: diff.rs  mod.rs
reginald_codegen/src/cli/cmd/: completion.rs  gen.rs  generate.rs  mod.rs  tool.rs
reginald_codegen/src/regmap/: bits.rs  convert.rs  listing.rs  mod.rs  validate.rs
reginald_codegen/src/writer/: header_writer.rs  indent_writer.rs  mod.rs
reginald_codegen/tests/: generator_tests.rs  map.yaml
reginald_codegen/tests/generator_c_funcpack/: .gitignore  mod.rs
reginald_codegen/tests/generator_c_funcpack/resources/: compile_flags.txt  test.c
reginald_codegen/tests/generator_c_macromap/: .gitignore  mod.rs
reginald_codegen/tests/generator_c_macromap/artifacts/: test.out
reginald_codegen/tests/generator_c_macromap/resources/: compile_flags.txt  test.c
reginald_codegen/tests/generator_rs_structs/: mod.rs
reginald_codegen/tests/generator_rs_structs/test_proj/: .gitignore  Cargo.toml
reginald_codegen/tests/generator_rs_structs/test_proj/src/: lib.rs
reginald_derive/: Cargo.toml  notes.md
reginald_derive/src/: lib.rs  utils.rs
reginald_derive/src/derive/: mod.rs
reginald_derive/src/input/: mod.rs  parse.rs
reginald_derive/tests/: coverage.rs  from_bytes_enum.rs  from_bytes_struct_basic.rs  from_bytes_struct_with_enum.rs  from_masked_bytes_enum.rs  large_fields_small_bits.rs  mod.rs  to_bytes_enum.rs  to_bytes_struct_basic.rs  to_bytes_struct_with_enum.rs  tobytes_enum.rs  tobytes_struct_with_enum.rs  try_from_bytes_enum.rs  try_from_bytes_struct.rs
reginald_utils/: Cargo.toml
reginald_utils/src/: bits.rs  lib.rs
reginald_wasm/: Cargo.toml
reginald_wasm/src/: lib.rs
reginald_web/: .gitignore  components.json  index.html  package-lock.json  package.json  vite.config.ts
reginald_web/src/: App.tsx  index.css  main.tsx  mosaic-custom.css  vite-env.d.ts
reginald_web/src/components/: header.tsx  toolbar.tsx
reginald_web/src/components/code/: code-panel.tsx  code-viewer.tsx  example_code.tsx  generator-config-card.tsx  generator-select.tsx
reginald_web/src/components/ui/: badge.tsx  (+11 more)
reginald_web/src/lib/: monaco-setup.ts
reginald_web/src/reginald/: c_funcpack.ts  c_macromap.ts  generators-option.ts  generators.ts
reginald_web/src/utils/: monaco-setup.ts
src/reginald/: __main__.py  bits.py  cli.py  generator.py  jinja2_generator.py
src/reginald/builtin_generators/: external_jinja2_template.py
src/reginald/input/: parse_yaml.py  validate_map.py
test/snapshot/: input_32b.yaml  input_64b.yaml  input_8b.yaml  input_9b.yaml  md_regdumpanalysis_32b.yaml  md_regdumpanalysis_64b.yaml  md_regdumpanalysis_8b.yaml  md_regdumpanalysis_9b.yaml  test_c_funcpack_snapshot.py  test_c_macromap_snapshot.py  test_md_doc_snapshot.py  test_md_regdumpanalysis_snapshot.py
test/snapshot/__snapshots__/: test_c_funcpack_snapshot.ambr  test_c_macromap_snapshot.ambr  test_md_doc_snapshot.ambr  test_md_regdumpanalysis_snapshot.ambr
(+28 files in other folders)
