[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reginald"
authors = [
  { name="Philipp Schilk", email="schilk.philipp@gmail.com" },
]
description = "Register-management code generator."
dynamic = ['version'] # Version defined in __init__.py
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML ~= 6.0',
  'Jinja2 ~= 3.1',
  'pydantic ~= 2.5',
  'tabulate ~= 0.9'
]

[project.urls]
Homepage = "https://github.com/schilkp/reginald"
Issues = "https://github.com/schilkp/reginald/issues"

[project.optional-dependencies]
dev = [ "autopep8", "flake8", "build", "twine" ]

[tool.hatch.version]
# Use version as defined in __init__.py:
path = "src/reginald/__init__.py"
