[package]
name        = "reginald_codegen"
description = "Register management code generator"

version.workspace    = true
authors.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true

[features]
clap            = ["dep:clap", "reginald_utils/clap"]
test_gen_output = []

[dependencies]
reginald_utils = { path = "../reginald_utils" }
regex          = "1.10.3"
lazy_static    = "1.4.0"
serde          = { version = "1.0.197", features = ["derive"] }
serde_yaml     = "0.9.32"
deser-hjson    = "2.2.4"
clap           = { workspace = true,    features = ["derive"], optional = true }
thiserror      = { workspace = true }
serde_json     = "1.0.140"

[dev-dependencies]
tempfile          = "3.10.1"
pretty_assertions = "1.4.0"
