[package]
name = "reginald_derive"

version.workspace    = true
authors.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true

[lib]
proc-macro = true

[dependencies]
proc-macro2    = { version = "1.0.79" }
quote          = { version = "1.0.36" }
syn            = { version = "2.0.58", features = ["full"] }
reginald_utils = { path = "../reginald_utils" }

[dev-dependencies]
reginald = { path = "../reginald", features = ["derive"] }
