[package]
name = "reginald_utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clap     = ["dep:clap"]

[dependencies]
clap = { version = "4.5.1",   features = ["derive"], optional = true}

[dev-dependencies]
pretty_assertions = "1.4.0"
