[package]
name = "reginald_utils"

version.workspace    = true
authors.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true

[features]
clap = ["dep:clap"]

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true}

[dev-dependencies]
pretty_assertions = "1.4.0"
