[package]
name = "reginald_wasm"

version.workspace    = true
authors.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reginald_codegen   = { path = "../reginald_codegen", default-features = false }
wasm-bindgen       = { version = "0.2.84" }
serde              = { version = "1.0.203",          features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
js-sys             = { version = "0.3.77" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
